Corrected blockquote alignment

--- a/buddystyle.css
+++ b/buddystyle.css
@@ -159,8 +159,8 @@ figcaption {
   width:400px;
   font-size: 25px;
   color: #1f2937;
-  margin-left: 175%;
-  margin-right: 200%;
+  margin-left: 250%;
+  margin-right: 250%;
 }
 
 .block1 {
